# notes-fastapi

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  pyproject.toml
app/: main.py
app/core/: settings.py
app/database/: crud.py  models.py  setup.py
app/schemas/: note.py
